RESOLVED FIXED228872
REGRESSION (r277997): Max-height not applied for image
https://bugs.webkit.org/show_bug.cgi?id=228872
Summary REGRESSION (r277997): Max-height not applied for image
alan
Reported 2021-08-06 14:07:04 PDT
Attachments
Broken image (208.45 KB, image/png)
2021-08-06 14:12 PDT, alan
no flags
Repro (717 bytes, text/html)
2021-08-08 23:12 PDT, Antti Koivisto
no flags
wip (3.03 KB, patch)
2021-08-09 03:08 PDT, Antti Koivisto
no flags
Patch (4.79 KB, patch)
2021-08-10 01:59 PDT, cathiechen
no flags
Patch (4.87 KB, patch)
2021-08-10 09:33 PDT, cathiechen
no flags
Patch (4.87 KB, patch)
2021-08-10 20:33 PDT, cathiechen
no flags
alan
Comment 1 2021-08-06 14:07:46 PDT
This still looks to be broken after https://trac.webkit.org/changeset/280631/webkit
alan
Comment 2 2021-08-06 14:12:23 PDT
Created attachment 435086 [details] Broken image
Antti Koivisto
Comment 3 2021-08-08 23:12:18 PDT
Antti Koivisto
Comment 4 2021-08-09 03:08:06 PDT
Antti Koivisto
Comment 5 2021-08-09 05:42:54 PDT
see bug 228913 for a similar failure without any min/max properties
cathiechen
Comment 6 2021-08-10 01:59:19 PDT
cathiechen
Comment 7 2021-08-10 09:33:23 PDT
cathiechen
Comment 8 2021-08-10 10:23:28 PDT
Comment on attachment 435267 [details] Patch Hi, I think this patch is ready for review. Thanks:)
Antti Koivisto
Comment 9 2021-08-10 11:09:43 PDT
Comment on attachment 435267 [details] Patch Did you check this fixes the reported site too?
cathiechen
Comment 10 2021-08-10 20:23:22 PDT
(In reply to Antti Koivisto from comment #9) > Comment on attachment 435267 [details] > Patch > > Did you check this fixes the reported site too? Yes, checked. The image size is correct now, but the site crashes afterwards. The crash issue is not related to this change. I will file a new bug for it.
cathiechen
Comment 11 2021-08-10 20:27:58 PDT
(In reply to cathiechen from comment #10) > (In reply to Antti Koivisto from comment #9) > > Comment on attachment 435267 [details] > > Patch > > > > Did you check this fixes the reported site too? > > Yes, checked. > The image size is correct now, but the site crashes afterwards. > The crash issue is not related to this change. > I will file a new bug for it. Filed https://bugs.webkit.org/show_bug.cgi?id=228982
cathiechen
Comment 12 2021-08-10 20:33:15 PDT
EWS
Comment 13 2021-08-11 00:53:15 PDT
Committed r280889 (240426@main): <https://commits.webkit.org/240426@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 435321 [details].
cathiechen
Comment 14 2021-08-12 06:04:22 PDT
*** Bug 228913 has been marked as a duplicate of this bug. ***
cathiechen
Comment 15 2021-08-12 07:30:31 PDT
BTW: This test has been added to WPT by https://github.com/web-platform-tests/wpt/pull/29964
Note You need to log in before you can comment on or make changes to this bug.